crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-no_text_engine-dataset-basic_megascience_vector_search_sql_filtered_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
"HTTP error: 400 Bad Request - Failed to execute query: Error during planning: Function 'trunc' requires TypeSignatureClass::Native(LogicalType(Native(Date), Date)), but received Float64 (DataType: Float64). No function matches the given name and argument types 'trunc(Float64, Int64)'. You might need to add explicit type casts.\n\tCandidate functions:\n\ttrunc(Coercion(TypeSignatureClass::Native(LogicalType(Native(Date), Date)), implicit_coercion=ImplicitCoercion([Native(LogicalType(Native(String), String))], default_type=Date), Coercion(TypeSignatureClass::Native(LogicalType(Native(String), String))))"
