crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-no_text_engine-dataset-basic_megascience_vector_search_sql_filtered_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
Could not prepare EXPLAIN plan: Query execution failed: code: 'The service is currently unavailable', message: "tcp connect error", source: tonic::transport::Error(Transport, ConnectError(ConnectError("tcp connect error", 127.0.0.1:50961, Os { code: 61, kind: ConnectionRefused, message: "Connection refused" })))
